# analytics

./: .gitignore  pyproject.toml  wmill-lock.yaml  wmill.yaml
f/crypto/: _trezor___btc__obtain_and_save_balance.py  _trezor___btc__obtain_and_save_balance.script.yaml  _trezor___eth__obtain_and_save_balance.py  _trezor___eth__obtain_and_save_balance.script.yaml  btc_xpub.variable.yaml  calculate_total_crypto_balance.py  calculate_total_crypto_balance.script.yaml  eth_address.variable.yaml  folder.meta.yaml
f/crypto/gather_crypto_balances.flow/: flow.yaml
f/general/: folder.meta.yaml  mongo_dsn.variable.yaml
