[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["David Lopez <40007435+dloez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wmill = "^1.364.2"
logfire = "^0.46.1"
pydantic = "^2.8.2"
requests = "^2.32.3"
pymongo = "^4.8.0"
hdwallet = "^2.2.1"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
